fix docker build and repo info
